--- a/SimpraCaseStudy/SimpraCaseStudy/Base.lproj/Main.storyboard
+++ b/SimpraCaseStudy/SimpraCaseStudy/Base.lproj/Main.storyboard
@@ -21,20 +21,28 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="loading" id="YKb-Wc-8BN">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="YKb-Wc-8BN" customClass="ListCell" customModule="SimpraCaseStudy" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YKb-Wc-8BN" id="KmK-li-b30">
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="loading" id="znf-Vv-7CY">
+                                        <rect key="frame" x="0.0" y="93.666667938232422" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="znf-Vv-7CY" id="4bB-Nw-8oZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="lKa-wo-atW">
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Jm0-e5-ecV">
                                                     <rect key="frame" x="178" y="3.3333333333333321" width="37" height="37"/>
                                                 </activityIndicatorView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="lKa-wo-atW" firstAttribute="centerY" secondItem="KmK-li-b30" secondAttribute="centerY" id="H63-bR-pUA"/>
-                                                <constraint firstItem="lKa-wo-atW" firstAttribute="centerX" secondItem="KmK-li-b30" secondAttribute="centerX" id="lhb-4b-idx"/>
+                                                <constraint firstItem="Jm0-e5-ecV" firstAttribute="centerY" secondItem="4bB-Nw-8oZ" secondAttribute="centerY" id="2Fr-QO-GXY"/>
+                                                <constraint firstItem="Jm0-e5-ecV" firstAttribute="centerX" secondItem="4bB-Nw-8oZ" secondAttribute="centerX" id="bxk-SP-hql"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
